# CommandlineDict

./: .gitmodules  CMakeLists.txt  README.md  dictionary.c  main.c
include/: dictionary.h
